; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_fetch.c_dealloc_tmp_evp_method_store.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_fetch.c_dealloc_tmp_evp_method_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @dealloc_tmp_evp_method_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dealloc_tmp_evp_method_store(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @ossl_method_store_free(i8* %6)
  br label %8

8:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @ossl_method_store_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
